--- a/booksys/config/database.yml
+++ b/booksys/config/database.yml
@@ -10,8 +10,14 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  reconnect: false
+  encoding: utf8
+  database: booksys_db
+  pool: 5
+  username: root
+  password: om551424
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
